--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@
 }
 .btn__test-new {
     text-align: center;
+    border: none;
 font-size: 20px;
 padding: 10px;
     transition: 0.5s;
@@ -38,3 +39,58 @@ padding: 10px;
      background-position: right center;
      cursor: pointer;
 }
+.back_img {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+
+}
+.divider {
+  margin-top: 20px;
+}
+form {
+    width: 300px;
+    margin: 0 auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  label {
+    display: block;
+    margin-bottom: 5px;
+  }
+  
+  input[type="text"],
+  input[type="email"],
+  textarea {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box; /* Чтобы padding не увеличивал ширину */
+  }
+  
+  input[type="submit"] {
+    background-color: #a36fab;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  input[type="submit"]:hover {
+    background-color: #45a049;
+  }
+
+  .item {
+    padding: 10px;
+    border-bottom: 1px solid #eee;
+  }
+  img {
+    max-width: 100%;
+    max-height: 100%;
+    height: auto;
+  }
