--- a/style.css
+++ b/style.css
@@ -94,3 +94,14 @@ form {
     max-height: 100%;
     height: auto;
   }
+  .article-card {
+    border-radius: 8px;
+    overflow: hidden;
+    transition: transform 0.3s;
+  }
+  .article-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 25px;
+    margin-top: 40px;
+}
